syntax = "proto3";

package gcustomer_service;

service GeneralCustomerService {
    rpc GetGeneralCustomer (gcustomerId) returns (GeneralCustomer);
    rpc GetGeneralCustomerLabel (gcustomerId) returns (Label);
}

message gcustomerId {
    string id = 1;
}

message Label {
    string label = 1;
}

message GeneralCustomer {
    string fullname = 2;
    string label = 3;
    Address address = 4;
    string tel = 5;
    string email = 6;
}

message Address {
    string zip = 1;
    string country = 2;
    string region = 3;
    string city = 4;
    string street = 5;
    string building = 6;
    string room = 7;
}